kubernetes/api/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maccas-api
  namespace: maccas-api
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: maccas-api
  replicas: 3
  template:
    metadata:
      labels:
        app: maccas-api
    spec:
      topologySpreadConstraints:
        - maxSkew: 2
          topologyKey: kubernetes.io/hostname
          labelSelector:
            matchLabels:
              app: maccas-api
          whenUnsatisfiable: ScheduleAnyway

      containers:
        - name: maccas-api
          image: maccas-api:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 80Mi
              cpu: 100m
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /v1/health/self
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 8000
