kubernetes/api/api.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maccas-api
  namespace: maccas-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "3"
    nginx.ingress.kubernetes.io/limit-rpm: "30"
    nginx.ingress.kubernetes.io/limit-connections: "5"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header CF-Connecting-IP;
spec:
  ingressClassName: nginx
  rules:
    - host: graphql.maccas.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maccas-api
                port:
                  name: api
  tls:
    - secretName: graphql-maccas-api-tls
      hosts:
        - graphql.maccas.one
